# MoiraFlow

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
docs/: 00-README.md  01-factibilidad-alcance-mvp.md  02-arquitectura.md  03-modelo-datos.md  04-api-y-esquema-workflow.md  06-roadmap-y-adr.md  (+6 more)
services/api/: alembic.ini  pyproject.toml
services/api/flowops_api/: main.py
services/api/flowops_api/db/: models.py
services/api/flowops_api/routers/: catalog.py  workflows.py
services/api/flowops_api/schemas/: validation.py
services/api/flowops_api/workflow/: __init__.py  dag.py  models.py  parser.py  references.py  validator.py
services/api/moiraflow_api/: agent_crypto.py  ca.py  config.py  deps.py  encryption.py  errors.py  live.py  main.py  observability.py  storage.py  temporal.py
services/api/moiraflow_api/auth/: exceptions.py  security.py
services/api/moiraflow_api/db/: base.py  models.py  session.py
services/api/moiraflow_api/migrations/: env.py
services/api/moiraflow_api/migrations/versions/: 32fcf0bfbf33_initial_schema.py
services/api/moiraflow_api/routers/: agents.py  audit.py  auth.py  catalog.py  executions.py  hooks.py  overview.py  secrets.py  users.py  workflows.py
services/api/moiraflow_api/schemas/: agents.py  auth.py  executions.py  secrets.py  simulation.py  workflows.py
services/api/moiraflow_api/scripts/: create_admin.py
services/api/moiraflow_api/services/: agents.py  audit.py  events.py  executions.py  notifications.py  overview.py  schedules.py  secrets.py  simulation.py  users.py  workflows.py
services/api/moiraflow_api/workflow/: catalog.py  errors.py  hashing.py  models.py  references.py
services/api/tests/: _helpers.py  test_agent_crypto.py  test_agent_service.py  test_api_agents.py  test_api_audit.py  test_api_auth.py  test_api_catalog.py  test_api_events.py  test_api_executions.py  test_api_hooks.py  test_api_schedules.py  test_api_users.py  test_api_validate.py  test_api_workflows.py  test_ca.py  test_dag.py  test_db_models.py  test_event_service.py  test_execution_service.py  test_hashing.py  test_live.py  test_models.py  test_notifications.py  test_observability.py  test_overview.py  test_parser.py  test_references.py  test_secrets.py  test_security.py  test_simulation.py  test_storage.py  test_temporal_tls.py  test_user_service.py  test_validator.py  test_workflow_service.py
services/worker/: pyproject.toml
services/worker/flowops_worker/: activities.py  interpreter.py  runtime.py  templating.py  workflow.py
services/worker/moiraflow_worker/: activities.py  agent.py  agent_crypto.py  durations.py  encryption.py  events.py  file_transfer.py  interpreter.py  isolation.py  main.py  policies.py  runtime.py  scheduling.py  secrets.py  storage.py  templating.py  tls.py  transform.py  workflow.py
services/worker/tests/: test_activities.py  test_agent.py  test_agent_crypto.py  test_durations.py  test_encryption.py  test_events.py  test_file_transfer.py  test_interpreter.py  test_interpreter_events.py  test_isolation.py  test_policies.py  test_replay.py  test_scheduling.py  test_sql.py  test_storage.py  test_templating.py  test_tls.py  test_transform.py  test_workflow_integration.py
services/worker/tests/fixtures/: agent_envelope.json  interpreter_history.json
(+40 files in other folders)
