[project]
name = "moiraflow-api"
version = "0.1.0"
description = "MoiraFlow API service"
# Production targets 3.12 (see docs/07); local dev floor is 3.10 so the toolchain
# works on the current interpreter. The code is written to run on 3.10–3.12.
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "temporalio>=1.8",
    "psycopg[binary]>=3.1",
    "argon2-cffi>=23",
    "pyjwt>=2.8",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "black>=24.0", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moiraflow_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make moiraflow_api importable without an editable install (no build backend /
# network needed for the local test cycle).
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
# Alembic autogenerates version files; don't lint generated code.
extend-exclude = ["moiraflow_api/migrations/versions"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["moiraflow_api/migrations/"]
