[project]
name = "moiraflow-worker"
version = "0.1.0"
description = "MoiraFlow Temporal worker (interpreter + server-side job activities)"
# Production targets 3.12; local dev floor is 3.10 (code runs on 3.10–3.12).
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.8",
    "httpx>=0.27",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "cryptography>=42.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "black>=24.0", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moiraflow_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
